Float at exact multiple of line-height affects too many lines https://bugs.webkit.org/show_bug.cgi?id=112744

Reviewed by David Hyatt.

Source/WebCore:

Tests: fast/block/float/float-with-fractional-height-vertical-lr.html
       fast/block/float/float-with-fractional-height.html

When adding floats to the interval tree used for testing floats' overlap with lineboxes
truncate the dimensions of the float rather than rounding them. This matches the
treatment of linebox dimensions so ensures the test for overlap is comparing like
with like.

* rendering/RenderBlock.cpp:
(WebCore::::collectIfNeeded):
(WebCore::RenderBlock::FloatingObjects::intervalForFloatingObject):
(WebCore::::string):

LayoutTests:

* fast/block/float/float-with-fractional-height-expected.html: Added.
* fast/block/float/float-with-fractional-height-vertical-lr-expected.html: Added.
* fast/block/float/float-with-fractional-height-vertical-lr.html: Added.
* fast/block/float/float-with-fractional-height.html: Added.
* platform/mac/fast/backgrounds/background-position-parsing-expected.txt:


Canonical link: https://commits.webkit.org/133060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148523 268f45cc-cd09-0410-ab3c-d52691b4dbfc